@@ -3,6 +3,7 @@ XinBox Version 0.99.8 Change Log:
 Updated: Finnish Strings thanks to mikko70
 Added: Scrollbar to Email Preview in Inbox - press right on email list/email list scrollbar to use.
 Added: "M" button to email dialog, use this to Mark current opened email as Un-Read.
+Updated: Mini-mode - Removed "Closing Mini Mode" dialog, So, straight into script, no waiting :-D
      
 
 
